--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -23,7 +23,9 @@
   <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Kartoza</a>
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Kartoza</a>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,7 +53,7 @@
         </div>
       </div>
     </nav>
-
+    
     <main class="container my-4">
       {% block content %}{% endblock %}
     </main>
