updated profile photo url

--- a/accounts/templates/profile/map.html
+++ b/accounts/templates/profile/map.html
@@ -35,7 +35,7 @@
 
   for (var i = 0; i < locations.length; i++) {
     var content = '<div>' +
-      '<img src="' + locations[i].picture + '" style="width: 100px;">' +
+      '<img src="' + locations[i].picture_url + '" style="width: 100px;">' +
       '<h4>' + locations[i].name + '</h4>' +
       '<p>' + locations[i].address + '</p>' +
       '<p>' + locations[i].phone + '</p>' +
